--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 <body>
     <div class="container">
         <div class="container2">
-        <div id="login">
-            <h1>Login</h1>
-            <p class="text">please enter your login Email/Password</p>
+            <div>
+                <div>
+                <legend>
+                    <h3>Team Management System</h3>
+                </legend>
+                <div id="login">
+                    <h1>Login</h1>
+                    <p class="text">please enter your login Email/Password</p>
+                </div>
+                <div class="email"><input class="inputs" type="email" placeholder="Username/Email"></div>
+                <div class="pass"><input class="inputs" type="email" placeholder="Password"></div>
+                <div>
+                    <p class="text"><a href="#"> Forgot Password?</a></p>
+                </div>
+                <div class="buttons"><button>Login</button></div>
+                <div class="buttons"><a href="./signup.html"><button> Create Account</button></a></div>
+
+
+
+            </div>
         </div>
-        <div class="email"><input class="inputs" type="email"  placeholder="Username/Email"></div>
-        <div class="pass"><input class="inputs" type="email" placeholder="Password"></div>
-        <div>
-            <p class="text"><a href="#"> Forgot Password?</a></p>
         </div>
-        <div class="buttons"><button>Login</button></div>
-        <div class="buttons"><button>Create Account</button></div>
-
-
-
-    </div>
-    </div>
-
-
-
-
 </body>
 
 </html>
