--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="email"><input class="inputs" type="email" id="loginemail" placeholder="Username/Email">
                     </div>
-                    <div class="pass"><input class="inputs" type="email" placeholder="Password" id="loginpassword">
+                    <div class="pass"><input class="inputs" type="password" placeholder="Password" id="loginpassword">
                     </div>
                     <div>
                         <p class="text"><a href="#"> Forgot Password?</a></p>
