--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div>
                 <div>
                     <legend>
-                        <h3>Pop-A-Baloon Game</h3>
+                        <h3>Pop-A-Balloon Game</h3>
                     </legend>
                     <div id="login">
                         <h1>Login</h1>
